Fix gcc clang compatibility issues with templates, Update cmake

--- a/client/CMakeLists.txt
+++ b/client/CMakeLists.txt
@@ -7,108 +7,22 @@ endif()
 # -----------------------------------------------------------------------------
 # Basic setup
 # -----------------------------------------------------------------------------
-set(PROJECT_NAME qpg)
-project(${PROJECT_NAME} LANGUAGES C CXX)
+project(qpg 
+  DESCRIPTION "Query plan generator"
+  LANGUAGES C CXX)
 
-set(CMAKE_CXX_FLAGS "-std=c++2b ${CMAKE_CXX_FLAGS}")
-set(CMAKE_C_FLAGS "-std=c2x ${CMAKE_C_FLAGS}")
-set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
-set(CMAKE_CONFIGURATION_TYPES Debug Released Sanitized)
+if (CMAKE_PROJECT_NAME STREQUAL PROJECT_NAME)
+  # Let's nicely support folders in IDEs
+  set_property(GLOBAL PROPERTY USE_FOLDERS ON)
 
-set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
-set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/arc)
-set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
-
-set(PROJECT_TEST_DIR ${CMAKE_SOURCE_DIR}/test)
-set(PROJECT_SRC_DIR ${CMAKE_SOURCE_DIR}/src)
-
-set(CMAKE_GENERATED_BIN_DIR ${CMAKE_BINARY_DIR}/gen)
-file(MAKE_DIRECTORY ${CMAKE_GENERATED_BIN_DIR})
-# -----------------------------------------------------------------------------
-# Configurations
-# -----------------------------------------------------------------------------
-set(FETCHCONTENT_QUIET OFF)
-enable_testing()
-
-include(FetchContent)
-# gRPC
-FetchContent_Declare(
-        googletest
-        URL https://github.com/google/googletest/archive/refs/tags/release-1.11.0.zip
-        )
-
-# bison/flex
-find_package(FLEX)
-find_package(BISON)
-# -----------------------------------------------------------------------------
-# Flex / bison targets
-# -----------------------------------------------------------------------------
-set(PARSER_DIR ${CMAKE_GENERATED_BIN_DIR})
-
-set(LEXER_OUT ${PARSER_DIR}/lexer.cpp)
-set(PARSER_OUT ${PARSER_DIR}/parser.cpp)
-
-set(SRC_PARSE ${PROJECT_SRC_DIR})
-
-flex_target(LEXER 
-  "${SRC_PARSE}/parse.l" 
-  "${LEXER_OUT}" DEFINES_FILE "${PARSER_DIR}/lexer.hpp")
-
-bison_target(PARSER 
-  "${SRC_PARSE}/parse.y" 
-  "${PARSER_OUT}" DEFINES_FILE "${PARSER_DIR}/parser.hpp")
-# -----------------------------------------------------------------------------
-# Library
-# -----------------------------------------------------------------------------
-set(PROJECT_LIB_NAME ${PROJECT_NAME})
-
-set(LIB_SRCS
-  src/qpg.cpp 
-)
-
-add_library(${PROJECT_LIB_NAME} STATIC ${LIB_SRCS} ${LEXER_OUT} ${PARSER_OUT})
-target_include_directories(${PROJECT_LIB_NAME} PUBLIC ${PROJECT_SOURCE_DIR}/include)
-target_include_directories(${PROJECT_LIB_NAME} PRIVATE ${PARSER_DIR})
-target_include_directories(${PROJECT_LIB_NAME} PRIVATE ${PROJECT_SRC_DIR})
-
-target_compile_options(${PROJECT_LIB_NAME} PUBLIC
-  -Wall
-  $<$<CONFIG:DEBUG>:-g -O0>
-  $<$<CONFIG:RELEASED>:-O3>
-  $<$<CONFIG:SANITIZED>:-fsanitize=address,undefined,leak -g>
-)
-target_link_options(${PROJECT_LIB_NAME} PUBLIC
-  -Wall
-  $<$<CONFIG:DEBUG>:-g -O0>
-  $<$<CONFIG:RELEASED>:-O3>
-  $<$<CONFIG:SANITIZED>:-fsanitize=address,undefined,leak -g>
-)
-# -----------------------------------------------------------------------------
-# Executable main.c
-# -----------------------------------------------------------------------------
-set(PROJECT_EXEC_NAME ${PROJECT_NAME}_exec)
-
-set(EXEC_SRC ${PROJECT_SOURCE_DIR}/app/main.cpp)
-
-if (EXISTS ${EXEC_SRC})
-  add_executable(${PROJECT_EXEC_NAME} ${EXEC_SRC})
-  target_link_libraries(${PROJECT_EXEC_NAME} ${PROJECT_LIB_NAME})
+  set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
+  set(CMAKE_CONFIGURATION_TYPES Debug Released Sanitized)
 endif()
-# -----------------------------------------------------------------------------
-# Tests
-# -----------------------------------------------------------------------------
-set(PROJECT_TEST_NAME ${PROJECT_NAME}_test)
 
-set(TSTS
+# Library
+add_subdirectory(src)
 
-)
-
-if (DEFINED TSTS)
-	FetchContent_MakeAvailable(googletest)
-
-  add_executable(${PROJECT_TEST_NAME} ${TSTS})
-  target_link_libraries(${PROJECT_TEST_NAME} ${PROJECT_LIB_NAME} gtest_main)
-
-  add_test(NAME ${PROJECT_TEST_NAME} COMMAND $<TARGET_FILE:${PROJECT_TEST_NAME}> 
-    WORKING_DIRECTORY ${CMAKE_SOURCE_DIR})
+# Executable
+if (CMAKE_PROJECT_NAME STREQUAL PROJECT_NAME)
+  add_subdirectory(apps)
 endif()
