--- a/dbms/src/CMakeLists.txt
+++ b/dbms/src/CMakeLists.txt
@@ -8,16 +8,16 @@ target_include_directories(${PROJECT_LIB_NAME} PUBLIC "../include")
 target_compile_options(${PROJECT_LIB_NAME} PUBLIC
   -Wall
   $<$<CONFIG:DEBUG>:-g -O0>
-  $<$<CONFIG:RELEASED>:-O3>
   $<$<CONFIG:SANITIZED>:-fsanitize=address,undefined,leak -g>
 )
 
 target_link_options(${PROJECT_LIB_NAME} PUBLIC
   -Wall
   $<$<CONFIG:DEBUG>:-g -O0>
-  $<$<CONFIG:RELEASED>:-O3>
   $<$<CONFIG:SANITIZED>:-fsanitize=address,undefined,leak -g>
 )
+
+message(DEBUG ${CMAKE_CXX_FLAGS_RELEASE})
 
 # IDEs should put the headers in a nice place
 source_group(
