--- a/client/CMakeLists.txt
+++ b/client/CMakeLists.txt
@@ -2,7 +2,11 @@ project(client LANGUAGES C CXX)
 
 set(PROJECT_EXEC_NAME ${PROJECT_NAME}_exec)
 
+# Client executable
 add_executable(${PROJECT_EXEC_NAME} 
-  main.cpp)
+  ./src/main.cpp)
 
-target_link_libraries(${PROJECT_EXEC_NAME} qpg)
+target_link_libraries(${PROJECT_EXEC_NAME} PRIVATE 
+  qpg 
+  proto::grpc_cpp
+)
