--- a/server/CMakeLists.txt
+++ b/server/CMakeLists.txt
@@ -2,6 +2,11 @@ project(server LANGUAGES C CXX)
 
 set(PROJECT_EXEC_NAME ${PROJECT_NAME}_exec)
 
-add_executable(${PROJECT_EXEC_NAME}
-  main.cpp)
-target_link_libraries(${PROJECT_EXEC_NAME} dbms)
+# Client executable
+add_executable(${PROJECT_EXEC_NAME} 
+  ./src/main.cpp)
+
+target_link_libraries(${PROJECT_EXEC_NAME} PRIVATE 
+  dbms
+  proto::grpc_cpp
+)
