Configure basic server and client

--- a/server/CMakeLists.txt
+++ b/server/CMakeLists.txt
@@ -3,6 +3,9 @@ project(server LANGUAGES C CXX)
 set(PROJECT_EXEC_NAME ${PROJECT_NAME}_exec)
 
 # Client executable
+find_package(Boost 1.80.0 REQUIRED COMPONENTS 
+  program_options)
+
 add_executable(${PROJECT_EXEC_NAME} 
   ./src/main.cpp)
 
@@ -10,4 +13,5 @@ target_link_libraries(${PROJECT_EXEC_NAME} PRIVATE
   dbms
   qpg 
   proto::grpc_cpp
+  ${Boost_LIBRARIES}
 )
