--- a/backend/template/_rst.py.template
+++ b/backend/template/_rst.py.template
@@ -1,21 +1,28 @@
-from fastapi import APIRouter, Depends
+from typing import Sequence
+
+from fastapi import APIRouter, Depends, HTTPException, status
 
 from medlenno.common.config import manager
-from medlenno.common.models import PydanticModel
+from medlenno.common.models import PydanticModel, SuccessModel, AllOptionalMeta
 from medlenno.users.users_db import User
 
-controller = APIRouter()
+controller = APIRouter(prefix="/", tags=[""])
 
 
 class Model(PydanticModel):
     pass
 
 
-@controller.get("", tags=[""], response_model=)
+@controller.get("", response_model=)
 def get_(user: User = Depends(manager), ):
     return ...
 
 
-@controller.post("", tags=[""])
-def post_(user: User = Depends(manager), ):
+@controller.post("", response_model=)
+def create_(user: User = Depends(manager), ):
+    pass
+
+
+@controller.put("", response_model=)
+def edit_(user: User = Depends(manager), ):
     pass
