--- a/.settings/org.eclipse.buildship.core.prefs
+++ b/.settings/org.eclipse.buildship.core.prefs
@@ -1,4 +1,4 @@
-arguments=
+arguments=--init-script /home/nikit/.local/share/nvim/mason/packages/jdtls/config_linux/org.eclipse.osgi/52/0/.cp/gradle/init/init.gradle
 auto.sync=false
 build.scans.enabled=false
 connection.gradle.distribution=GRADLE_DISTRIBUTION(WRAPPER)
