--- a/build.gradle
+++ b/build.gradle
@@ -13,6 +13,7 @@ dependencies {
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.9.1'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.9.1'
     implementation 'org.junit.jupiter:junit-jupiter-params:5.9.1'
+    implementation 'org.apache.commons:commons-csv:1.9.0'
 }
 
 application {
