--- a/build.gradle
+++ b/build.gradle
@@ -14,6 +14,7 @@ dependencies {
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.9.1'
     implementation 'org.junit.jupiter:junit-jupiter-params:5.9.1'
     implementation 'org.apache.commons:commons-csv:1.9.0'
+    testImplementation 'org.mockito:mockito-core:5.2.0'
 }
 
 application {
